@@ -6,6 +6,7 @@
       for example
       "DRIVER={Easysoft ODBC-SQL Server};Server=myserver;UID=user;PWD=pass;DMStmtAttr=SQL_QUERY_TIMEOUT=10;"
     * Error and info message order was being inverted by the driver manager
+    * Fix memory leak in SQLDriverConnect.c (Thanks JM)
 
 20th-April-2010
 2.3.0
